--- a/views/beats/new.ejs
+++ b/views/beats/new.ejs
@@ -35,8 +35,8 @@
 
         <select name="keyScale" id="keyScale">
             <option></option>
-            <option value="major">Major</option>
-            <option value="minor">Minor</option>
+            <option value="Major">Major</option>
+            <option value="Minor">Minor</option>
         </select>
         <label for="price">Price:</label>
         <input type="numer" name="price" id="price">
