--- a/views/beats/edit.ejs
+++ b/views/beats/edit.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Food</title>
+    <title>edit beat</title>
+    <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
