create grid and flexbox for home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,12 @@
   <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <%- include('./partials/_navbar.ejs') %>
-  <h1>More Than Music</h1>
+  <header>
+    <img src="https://i.imgur.com/ufwgVk4.png" alt="logo that says More than Music" id="logo">
+    <%- include('./partials/_navbar.ejs') %>
+  </header>
+  <main>
+
+  </main>
 </body>
 </html>
