--- a/public/style.css
+++ b/public/style.css
@@ -8,10 +8,6 @@
     padding: 0;
 }
 
-a {
-    /* display: block; */
-}
-
 body {
     display: grid;
     grid-template-rows: auto 1fr;
@@ -28,12 +24,22 @@ header {
     grid-template-columns: auto 1fr;
     align-items: center;
     border-bottom: 2px solid rgb(201, 201, 201);
-    background-color: rgb(29, 29, 29);
+    background-color: rgb(37, 37, 37);
 }
 
 main {
     grid-area: main;
-    background-color: rgb(37, 37, 37);
+    background-color: rgb(29, 29, 29);
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    transition: 0.5s;
+}
+
+a:hover {
+    color: red;
 }
 
 .nav {
@@ -42,8 +48,13 @@ main {
     justify-content: space-around;
 }
 
+.nav a {
+    position: relative;
+    top: 20px;
+}
+
 #logo {
     width: 80px;
     height: 70px;
-    margin: 10px;
+    margin: 15px;
 }
