--- a/views/auth/passwords.ejs
+++ b/views/auth/passwords.ejs
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <%- include('../partials/_navbar.ejs') %>
+  <header>
+    <%- include('../partials/_navbar.ejs') %>
+  </header>
+  <main>
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
@@ -21,6 +24,7 @@
       <button type="submit">Sign up</button>
     </form>
     <p>Passwords must match.</p>
+  </main>
 </body>
 
 </html>
