--- a/views/auth/incorrect.ejs
+++ b/views/auth/incorrect.ejs
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-  <%- include('../partials/_navbar.ejs') %>
-  <h1>Sign in</h1>
-  <form action="/auth/sign-in" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" name="username" id="username" required />
-    <label for="password">Password:</label>
-    <input type="password" name="password" id="password" required />
-    <button type="submit">Sign in</button>
-  </form>
-  <p>Incorrect username or password.</p>
+  <header>
+    <%- include('../partials/_navbar.ejs') %>
+  </header>
+  <main>
+    <h1>Sign in</h1>
+    <form action="/auth/sign-in" method="POST">
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username" required />
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" required />
+      <button type="submit">Sign in</button>
+    </form>
+    <p>Incorrect username or password.</p>
+  </main>
 </body>
+
 </html>
