--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <%- include('../partials/_navbar.ejs') %>
+  <header> 
+    <%- include('../partials/_navbar.ejs') %>
+  </header>
+  <main>
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
@@ -20,6 +23,7 @@
       <input type="password" name="confirmPassword" id="confirmPassword" required />
       <button type="submit">Sign up</button>
     </form>
+  </main>
 </body>
 
 </html>
