finish home page and basic styling on the forms

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="/form.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,9 +17,9 @@
     <h1>Sign in</h1>
     <form action="/auth/sign-in" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required />
+      <input type="text" name="username" id="username" required autofocus/>
       <label for="password">Password:</label>
-      <input type="password" name="password" id="password" required />
+      <input type="password" name="password" id="password" required/>
       <button type="submit">Sign in</button>
     </form>
   </main>
