--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="/form.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required />
+      <input type="text" name="username" id="username" required autofocus/>
       <label for="password">Password:</label>
       <input type="password" name="password" id="password" required />
       <label for="confirmPassword">Confirm Password:</label>
