--- a/views/beats/new.ejs
+++ b/views/beats/new.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New beat</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="/form.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
