--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    color: rgb(201, 201, 201);
+    box-sizing: border-box;
+    color: rgb(234, 233, 221);
     font-family: Poppins, sans-serif;
     font-weight: bold;
     margin: 0;
@@ -46,21 +47,24 @@ a {
     transition: 0.3s;
 }
 
-.text-button:hover {
-    color: red;
-    font-size: 1.22rem;
-}
-
 .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 3vw 0 3vw;
+    padding: 0 3vw;
 }
 
 .nav > a {
     position: relative;
-    top: 20px;
+    top: 10px;
+    /* flex-basis: 100%;
+    flex-grow: 1; */
+    /* background: rgb(255, 0, 255); */
+}
+
+.text-button:hover {
+    color: red;
+    font-size: 1.22rem;
 }
 
 .login a {
@@ -75,6 +79,18 @@ a {
 }
 
 #sign-in:hover {
+    color: black;
+    padding: 11px;
+}
+
+#sign-out {
+    background-color: rgb(109, 109, 109);
+    padding: 10px;
+    border-radius: 7%;
+    transition: 0.2s;
+}
+
+#sign-out:hover {
     color: black;
     padding: 11px;
 }
