--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,18 +1,20 @@
 <a href="/">
   <img src="https://i.imgur.com/ufwgVk4.png" alt="logo that says More than Music" id="logo">
 </a>
-<span class="nav">
-  <a href="/" class="text-button">Home</a>
+<nav class="nav">
+    <a href="/" class="text-button">Home</a>
 <% if(user) { %>
-  <a href="/users/<%=user._id%>/beats" class="text-button">My Beats</a>
-  <a href="/users/producers" class="text-button">Producers</a>
-  <a href="/users/<%=user._id%>/beats/new" class="text-button">Upload Beat</a>
-  <a href="/auth/sign-out" class="text-button">Sign Out</a>
+    <a href="/users/<%=user._id%>/beats" class="text-button">My Beats</a>
+    <a href="/users/producers" class="text-button">Producers</a>
+    <a href="/users/<%=user._id%>/beats/new" class="text-button">Upload Beat</a>
+    <span class="login">
+      <a href="/auth/sign-out" class="text-button" id="sign-out">Sign Out</a>
+    </span>
+</nav>
 <% } else { %>
   <!-- <a href="/users/community">Producers</a> -->  
-  <span class="login">
-    <a href="/auth/sign-up" class="text-button" id="sign-up">Sign Up</a>
-    <a href="/auth/sign-in" class="text-button" id="sign-in">Sign In</a>
-  </span>
-<% } %>
+<span class="login">
+  <a href="/auth/sign-up" class="text-button" id="sign-up">Sign Up</a>
+  <a href="/auth/sign-in" class="text-button" id="sign-in">Sign In</a>
 </span>
+<% } %>
