--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -7,6 +7,7 @@
   <title>Sign Up</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
   <link href="/form.css" rel="stylesheet" type="text/css">
+  <link href="/sign-up.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -17,11 +18,17 @@
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required autofocus/>
+      <div class="input-box" id="username-box">
+        <input type="text" name="username" id="username" required autofocus/>
+      </div>
       <label for="password">Password:</label>
-      <input type="password" name="password" id="password" required />
+      <div class="input-box" id="password-box">
+        <input type="password" name="password" id="password" required />
+      </div>
       <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" name="confirmPassword" id="confirmPassword" required />
+      <div class="input-box" id="confirm-password-box">
+        <input type="password" name="confirmPassword" id="confirmPassword" required />
+      </div>
       <button type="submit">Sign up</button>
     </form>
   </main>
