--- a/views/beats/new.ejs
+++ b/views/beats/new.ejs
@@ -6,6 +6,7 @@
     <title>New beat</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
     <link href="/form.css" rel="stylesheet" type="text/css">
+    <link href="/new.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
@@ -13,38 +14,44 @@
     </header>
     <main>
         <h1>Upload a Beat</h1>
-        <form action="/users/<%= user._id %>/beats" method="POST">
-            <label for="title">Title:</label>
-            <input type="text" name="title" id="title">
-            <label for="genre">Genre:</label>
-            <input type="text" name="genre" id="genre">
-            <label for="tempo">Tempo:</label>
-            <input type="number" name="tempo" id="tempo" maxlength="3">
-            <label for="keyLetter">Key:</label>
-            <select name="keyLetter" id="keyLetter">
-                <option></option>
-                <option value="C">C</option>
-                <option value="D">D</option>
-                <option value="E">E</option>
-                <option value="F">F</option>
-                <option value="G">G</option>
-                <option value="A">A</option>
-                <option value="B">B</option>
-            </select>
-    
-            <select name="keyAccidental" id="keyAccidental">
-                <option></option>
-                <option value="#">#</option>
-                <option value="b">b</option>
-            </select>
-    
-            <select name="keyScale" id="keyScale">
-                <option></option>
-                <option value="Major">Major</option>
-                <option value="Minor">Minor</option>
-            </select>
-            <label for="price">Price:</label>
-            <input type="numer" name="price" id="price">
+        <form action="/users/<%= user._id %>/beats" method="POST" class="form-container">
+            <div class="input-box-row">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title">
+                <label for="genre">Genre:</label>
+                <input type="text" name="genre" id="genre">
+            </div>
+            <div class="input-box-row">
+                <label for="tempo">Tempo:</label>
+                <input type="number" name="tempo" id="tempo" maxlength="3">
+                <label for="keyLetter">Key:</label>
+                <select name="keyLetter" id="keyLetter">
+                    <option></option>
+                    <option value="C">C</option>
+                    <option value="D">D</option>
+                    <option value="E">E</option>
+                    <option value="F">F</option>
+                    <option value="G">G</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                </select>
+        
+                <select name="keyAccidental" id="keyAccidental">
+                    <option></option>
+                    <option value="#">#</option>
+                    <option value="b">b</option>
+                </select>
+        
+                <select name="keyScale" id="keyScale">
+                    <option></option>
+                    <option value="Major">Major</option>
+                    <option value="Minor">Minor</option>
+                </select>
+            </div>
+            <div class="input-box-row">
+                <label for="price">Price:</label>
+                <input type="numer" name="price" id="price">
+            </div>
             <button type="submit">Upload</button>
         </form>
     </main>
