--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="/producers.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
