--- a/views/auth/incorrect.ejs
+++ b/views/auth/incorrect.ejs
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="/form.css" rel="stylesheet" type="text/css">
+  <link href="/sign-in.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,12 +18,16 @@
     <h1>Sign in</h1>
     <form action="/auth/sign-in" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required />
+      <div class="input-box" id="username-box">
+        <input type="text" name="username" id="username" required autofocus />
+      </div>
       <label for="password">Password:</label>
-      <input type="password" name="password" id="password" required />
+      <div class="input-box" id="password-box">
+        <input type="password" name="password" id="password" required />
+      </div>
+      <p id="incorrect">Incorrect username or password.</p>
       <button type="submit">Sign in</button>
     </form>
-    <p>Incorrect username or password.</p>
   </main>
 </body>
 
