--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
     display: grid;
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
-    grid-template-areas: 
+    grid-template-areas:
         'header'
         'main';
     height: 100vh;
@@ -23,7 +23,6 @@ header {
     grid-area: header;
     display: grid;
     grid-template-columns: auto 1fr;
-    /* grid-template-areas: ; */
     align-items: center;
     border-bottom: 2px solid rgb(201, 201, 201);
     background-color: rgb(37, 37, 37);
@@ -45,6 +44,14 @@ a {
     text-decoration: none;
     font-size: 1.2rem;
     transition: 0.3s;
+}
+
+.background-alt {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px 0 0 0;
 }
 
 .nav {
@@ -90,9 +97,7 @@ a {
 }
 
 #logo {
-    /* grid-area: logo; */
     width: 80px;
     height: 70px;
     margin: 25px 10px 20px 25px;
-    /* padding-right: 3vw; */
 }
