--- a/views/auth/userTaken.ejs
+++ b/views/auth/userTaken.ejs
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up</title>
   <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="/form.css" rel="stylesheet" type="text/css">
+  <link href="/sign-up.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,14 +18,20 @@
     <h1>Create a new account!</h1>
     <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
-      <input type="text" name="username" id="username" required />
+      <div class="input-box" id="username-box">
+        <input type="text" name="username" id="username" required autofocus />
+      </div>
+      <p id="existing-username">Username already exists.</p>
       <label for="password">Password:</label>
-      <input type="password" name="password" id="password" required />
+      <div class="input-box" id="password-box">
+        <input type="password" name="password" id="password" required />
+      </div>
       <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" name="confirmPassword" id="confirmPassword" required />
+      <div class="input-box" id="confirm-password-box">
+        <input type="password" name="confirmPassword" id="confirmPassword" required />
+      </div>
       <button type="submit">Sign up</button>
     </form>
-    <p>Username already exists.</p>
   </main>
 </body>
 
