--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <%- include('./partials/_navbar.ejs') %>
   </header>
   <main>
+    <img class="background-alt" alt="A recording studio with red LED lighting">
     <h1>A Collective of Musicians Striving to Make Music that Glorifies God.</h1><br>
     <% if (user) { %>
       <a href="/users/<%= user._id %>/beats/new" class="text-button" id="start-creating">Start Creating</a>
