--- a/public/sign-up.css
+++ b/public/sign-up.css
@@ -17,7 +17,7 @@ input {
     margin: 2px;
     background-color: rgb(201, 201, 201);
     font-size: 1rem;
-    box-shadow: 0px 5px 10px 2px rgb(0, 0, 0, 0.4);
+    box-shadow: 0px 5px 10px 2px rgb(0, 0, 0, 0.4); /* I watched a youtube video on this */
     transition: 0.2s;
 }
 
