--- a/views/beats/edit.ejs
+++ b/views/beats/edit.ejs
@@ -20,15 +20,15 @@
             <form action="/users/<%= user._id %>/beats/<%= beatData._id %>?_method=PUT" method="POST">
                 <div class="input-box-row">
                     <label for="title">Title:</label>
-                    <input type="text" name="title" id="title" value="<%= beatData.title %>">
+                    <input type="text" name="title" id="title" value="<%= beatData.title %>" required>
                     <label for="genre">Genre:</label>
-                    <input type="text" name="genre" id="genre" value="<%= beatData.genre %>">
+                    <input type="text" name="genre" id="genre" value="<%= beatData.genre %>" required>
                 </div>
                 <div class="input-box-row">
                     <label for="tempo">Tempo:</label>
-                    <input type="number" name="tempo" id="tempo" maxlength="3" value="<%= beatData.tempo %>">
+                    <input type="number" name="tempo" id="tempo" maxlength="3" value="<%= beatData.tempo %>" required>
                     <label for="keyLetter">Key:</label>
-                    <select name="keyLetter" id="keyLetter">
+                    <select name="keyLetter" id="keyLetter" required>
                         <option></option>
                         <option value="C" <% if (beatData.keyLetter==='C' ) { %>selected="selected"<% } %>>C</option>
                         <!-- I learned the selected="selected" from stack overflow -->
@@ -54,7 +54,7 @@
                 </div>
                 <div class="input-box-row">
                     <label for="price">Price:</label>
-                    <input type="numer" name="price" id="price" value="<%= beatData.price %>">
+                    <input type="numer" name="price" id="price" value="<%= beatData.price %>" required>
                 </div>
                 <button type="submit" id="update">Update</button>
             </form>
